--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,16 @@
   "name": "python-template",
   "dockerFile": "Dockerfile",
   "postCreateCommand": "apt update",
+  "settings": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "[python]": {
+      "editor.defaultFormatter": "ms-python.python"
+    },
+    "python.formatting.provider": "black"
+  },
   "extensions": [
     "esbenp.prettier-vscode",
     "ms-python.python",
