--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: pip install pipenv
       - run: pipenv install --dev
-      - run: pipenv run black --check python_template/
+      - run: pipenv run black --check
+      - run: pipenv run isort --check python_template/
       - run: pipenv run pylint python_template
       - run: pipenv run pytest
       - run: pipenv run mypy .
