--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ black = "==21.12b0"
 pylint = "==2.12.1"
 pytest = "==6.2.5"
 mypy = "==0.931"
+isort = "==5.10.1"
 
 [requires]
 python_version = "3.10"
