--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,9 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: pip install pipenv
-      - run: pipenv install --dev
-      - run: pipenv run black --check
-      - run: pipenv run isort --check python_template/
-      - run: pipenv run pylint python_template
-      - run: pipenv run pytest
-      - run: pipenv run mypy .
+      - run: make install
+      - run: make code-analysis
+      - run: make test
